[gd_scene load_steps=2 format=3 uid="uid://c5thlr0tfddoe"]

[ext_resource type="Script" uid="uid://bk38es8bv6snb" path="res://scripts/editors/TerrainSettingsDialog.gd" id="1_k8bl3"]

[node name="TerrainSettingsDialog" type="Window"]
auto_translate_mode = 1
oversampling_override = 1.0
title = "New Terrain"
position = Vector2i(55, 36)
size = Vector2i(500, 450)
script = ExtResource("1_k8bl3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BaseContainer" type="FoldableContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
title = "Base"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer"]
layout_mode = 2
theme_override_constants/h_separation = 24
columns = 2

[node name="IdLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer"]
layout_mode = 2
text = "Terrain ID"

[node name="TerrainId" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Unique ID"

[node name="TitleLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer"]
layout_mode = 2
text = "Terrain Name"

[node name="NewTerrainTitle" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Title"

[node name="SizeLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer"]
layout_mode = 2
text = "Size in meters"

[node name="Size" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="XLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer/Size"]
layout_mode = 2
text = "X"

[node name="X" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer/Size"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1000.0
max_value = 10000.0
value = 2000.0
suffix = "m"

[node name="YLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer/Size"]
layout_mode = 2
text = "Y"

[node name="Y" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/BaseContainer/GridContainer/Size"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1000.0
max_value = 10000.0
value = 2000.0
suffix = "m"

[node name="MetadataContainer" type="FoldableContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
title = "Metadata"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer"]
layout_mode = 2
theme_override_constants/h_separation = 24
columns = 2

[node name="GridLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
layout_mode = 2
text = "Grid Start Number"

[node name="GridStart" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="XLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer/GridStart"]
layout_mode = 2
text = "X"

[node name="X" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer/GridStart"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 899.0
value = 100.0

[node name="YLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer/GridStart"]
layout_mode = 2
text = "Y"

[node name="Y" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer/GridStart"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 899.0
value = 100.0

[node name="ElevationLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
layout_mode = 2
text = "Base Elevation"

[node name="BaseElevation" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 5000.0
value = 110.0
suffix = "m"

[node name="CountryLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
layout_mode = 2
text = "Country"

[node name="MetaCountry" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Germany"
placeholder_text = "Germany"

[node name="EditionLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
layout_mode = 2
text = "Edition"

[node name="MetaEdition" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1-DMA"
placeholder_text = "1-DMA"

[node name="SeriesLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
layout_mode = 2
text = "Series"

[node name="MetaSeries" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "V798"
placeholder_text = "V798"

[node name="SheetLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
layout_mode = 2
text = "Sheet"

[node name="MetaSheet" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/MetadataContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3850 II"
placeholder_text = "3850 II"

[node name="ActionsRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="VBoxContainer/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="Spacer" type="Control" parent="VBoxContainer/ActionsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Create" type="Button" parent="VBoxContainer/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Create"
